[gd_scene load_steps=11 format=3 uid="uid://d1yjnep65j74a"]

[ext_resource type="Script" path="res://Objects/Campaign/military/army.gd" id="1_836ho"]
[ext_resource type="Texture2D" uid="uid://cgp6f6m73ehi7" path="res://icon.svg" id="1_xkwou"]
[ext_resource type="Script" path="res://Objects/Campaign/military/army_data.gd" id="2_6lnqx"]
[ext_resource type="Texture2D" uid="uid://gsdup63vf75s" path="res://Assets/units/box.png" id="2_777mv"]
[ext_resource type="Script" path="res://Objects/Campaign/military/unit_data/unit_data.gd" id="2_cwf5g"]
[ext_resource type="PackedScene" uid="uid://biq4lgibkxe6v" path="res://Objects/General/mouse_detector.tscn" id="4_mc6e8"]
[ext_resource type="PackedScene" uid="uid://drxlf76g7y02i" path="res://Objects/General/debug_personal.tscn" id="6_y55uu"]

[sub_resource type="Resource" id="Resource_e2amk"]
script = ExtResource("2_6lnqx")
army_units = Array[ExtResource("2_cwf5g")]([])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_76jts"]
size = Vector2(44, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_coned"]
radius = 63.1269

[node name="Army" type="CharacterBody2D" groups=["armies", "persistent"]]
process_mode = 3
z_index = 100
z_as_relative = false
script = ExtResource("1_836ho")
army_name = "Army"
SPEED = 30
army_data = SubResource("Resource_e2amk")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(1, 3)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_777mv")

[node name="Node" type="Node" parent="."]

[node name="Line2D" type="Line2D" parent="Node"]
z_index = 40
z_as_relative = false
points = PackedVector2Array(0, 0)
width = 4.0

[node name="closest" type="Sprite2D" parent="Node"]
visible = false
modulate = Color(1, 0, 0, 1)
z_index = 50
z_as_relative = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_xkwou")

[node name="MouseDetector" parent="." instance=ExtResource("4_mc6e8")]
process_mode = 3
collision_layer = 2
collision_mask = 512

[node name="CollisionShape2D" parent="MouseDetector" index="0"]
visible = false
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_76jts")

[node name="ArmyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArmyDetector"]
visible = false
shape = SubResource("CircleShape2D_coned")
debug_color = Color(0.321569, 0.631373, 0.45098, 0.298039)

[node name="DebugPersonal" parent="." instance=ExtResource("6_y55uu")]
property_1 = "global_position"
property_2 = "path"
property_3 = "state"
font_size = 12

[connection signal="mouse_entered" from="MouseDetector" to="." method="_on_mouse_detector_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetector" to="." method="_on_mouse_detector_mouse_exited"]
[connection signal="area_entered" from="ArmyDetector" to="." method="_on_army_detector_area_entered"]

[editable path="MouseDetector"]
